--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -2,14 +2,20 @@
   width: 200px;
   padding: 10px;
   margin-right: 30px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0px 4px 4px rgb(0 1 0 / 30%);
 }
 
 .btn {
   padding: 10px;
   border-radius: 5px;
+  border: none;
   color: dimgray;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
 }
 
 .btn:hover {
-  background-color: rgb(32, 211, 211);
+  background-color: rgb(139, 0, 0);
+  color: rgb(255, 255, 255);
 }
