--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,13 @@
   color: #61dafb;
 }
 
+.Spinner {
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 82px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
